Messed with CSS. Fixed text wrapping issue in Tree

--- a/all.css
+++ b/all.css
@@ -1,9 +1,3 @@
-
-/* Setting the font*/
-*, html {
-  font-family: Verdana, Arial, Helvetica, sans-serif; 
-}
-
 body, form, ul, li, p, h1, h2, h3, h4, h5
 {
   margin: 0;
@@ -11,29 +5,32 @@ body, form, ul, li, p, h1, h2, h3, h4, h5
 }
 
 body{
+  font-size: .75em; /* Sets base font size to 16px */ 
+  font-family: Verdana, Arial, Helvetica, sans-serif; 
   background: #000 url(wrapper/body-bg-repeat.png) top left repeat-x;
 }
 
-img { border: none; }
+input, select, textarea, th, td {
+  font-size: .75em;
+}
+
+html, table { 
+  font-size: 100%; /* IE hack */ 
+}
+
+img {
+  border: none;
+}
 
 .displayed{
   background:green;
 }
 
 #treeDiv{
-  overflow: scroll;
+  overflow: auto;
   width:270px;
   height:700px;
   padding-bottom: 
-}
-
-#treeHeader{
-  color: red;
-  text-align: center;
-}
-
-#treeOl{
-  width:400px;
 }
 
 #treeHeader{
@@ -49,40 +46,35 @@ p{
   font-size: 1em;
   margin: 0 0 1em 0;
 }
-
-html { font-size: 100%; /* IE hack */ }
-body { font-size: 1em; /* Sets base font size to 16px */ }
-table { font-size: 100%; /* IE hack */ }
-input, select, textarea, th, td { font-size: 1em; }
   
 /* CSS Tree menu styles */
 ol.tree{
-  padding: 0 0 0 20px;
-  width: 300px;
+  padding: 0 0 0 25px;
+}
+
+ol.tree label{
+  display:inline-block;
+  white-space: nowrap;
 }
 
 li { 
   position: relative; 
-  margin-left: -10px;
+  margin-left: -15px;
   list-style: none;
 }
 
 li.file{
+  background: url(treeImages/document.png) 0 0 no-repeat;
+  padding-left: 21px;
   margin-left: -1px !important;
 }
 
-li.file a{
-  background: url(treeImages/document.png) 0 0 no-repeat;
-  color: #fff;
-  padding-left: 21px;
-  text-decoration: none;
+li label{
+  background: url(treeImages/folder-horizontal.png) 15px 1px no-repeat;
+  cursor: pointer;
   display: block;
+  padding-left: 37px;
 }
-
-li.file a[href *= '.pdf'] { background: url(treeImages/document.png) 0 0 no-repeat; }
-li.file a[href *= '.html']  { background: url(treeImages/document.png) 0 0 no-repeat; }
-li.file a[href $= '.css'] { background: url(treeImages/document.png) 0 0 no-repeat; }
-li.file a[href $= '.js']  { background: url(treeImages/document.png) 0 0 no-repeat; }
 
 li input{
   position: absolute;
@@ -104,13 +96,6 @@ li input + ol{
 
 li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
 
-li label{
-  background: url(treeImages/folder-horizontal.png) 15px 1px no-repeat;
-  cursor: pointer;
-  display: block;
-  padding-left: 37px;
-}
-
 li input:checked + ol
 {
   background: url(treeImages/toggle-small.png) 40px 5px no-repeat;
@@ -129,9 +114,6 @@ li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }
   background: transparent url(wrapper/body-bg-top.png) top left no-repeat;
 }
 
-/**
- * Header container styles
- */
 #header {
   margin-right: 75px;
   padding: 13px 11px 16px;
